k8s/01-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infracommand-backend
  namespace: infracommand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infracommand-backend
  template:
    metadata:
      labels:
        app: infracommand-backend
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: backend
          image: 192.168.101.80:8082/infracommand-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: db-storage
              mountPath: /data
            - name: trivy-binary
              mountPath: /usr/local/bin/trivy
              readOnly: true
      volumes:
        - name: db-storage
          hostPath:
            path: /opt/infracommand/db
            type: DirectoryOrCreate
        - name: trivy-binary
          hostPath:
            path: /usr/local/bin/trivy
            type: File
      imagePullSecrets:
        - name: nexus-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: infracommand-backend
  namespace: infracommand
spec:
  selector:
    app: infracommand-backend
  ports:
    - port: 5000
      targetPort: 5000
