k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infracommand-ingress
  namespace: infracommand
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: infracommand-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infracommand-frontend
                port:
                  number: 80
